Upadted to avoid risk

--- a/_config.yml
+++ b/_config.yml
@@ -294,7 +294,7 @@ google_site_verification: google1f23435b8b4b0519.html
 #   publisher:           <id>
 #   admins:              <id>
 
-Used on index and about sites
+#Used on index and about sites
 social:
   name:                Jacob Celestine
   links:
