Updated about me

--- a/_config.yml
+++ b/_config.yml
@@ -49,12 +49,12 @@ author:
 menu:
   - title:             About
     url:               /about/
-  - title:             Education
-    url:               /example/
-  - title:             Blog
-    url:               /example/
-  - title:             Skills & Experience
-    url:               /example/
+  # - title:             Education
+  #   url:               /example/
+  # - title:             Blog
+  #   url:               /example/
+  # - title:             Skills & Experience
+  #   url:               /example/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
