--- a/_config.yml
+++ b/_config.yml
@@ -40,17 +40,15 @@ logo:                  /assets/icons/icon.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
-  name:                <Jacob> <Celestine>
-  email:               <jacobceles@gmail.com>
+  name:                Jacob Celestine
+  email:               jacobceles@gmail.com
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title:             About
-    url:               /about/
-  # - title:             Education
-  #   url:               /example/
+  - title:             Education
+    url:               /blog/
   # - title:             Blog
   #   url:               /example/
   # - title:             Skills & Experience
@@ -72,7 +70,7 @@ permalink:             /:categories/:year-:month-:day-:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:              10
-paginate_path:         /page-:num/
+paginate_path:         /blog/page-:num/
 
 
 # Customizaton
