Initial commit for works page

--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,8 @@ menu:
     url:               /education_skills/
   - title:             Experience
     url:               /experience/
-  # - title:             Skills & Experience
-  #   url:               /example/
+  - title:             Works
+    url:               /projects/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
