--- a/_config.yml
+++ b/_config.yml
@@ -268,7 +268,7 @@ plugins:
 # ---------------------------------------------------------------------------------------
 
 # theme: jekyll-theme-hydejack
-# remote_theme: qwtel/hydejack@v8.5.0
+remote_theme: qwtel/hydejack@v8.5.0
 
 # SEO Tag
 # ---------------------------------------------------------------------------------------
