--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ menu:
     url:               /experience/
   - title:             Works
     url:               /projects/
+  # - title:             Blog
+  #   url:               /blog/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
