--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,11 +6,6 @@
     external_url: https://jacobcelestine.com/knowledge_repo/colab_and_pyspark/
 
 - project :
-    name: App De`Vitae
-    tools: [android, java]
-    description: An application which acts as a fitness assistant, by monitoring parameters of the user and his diet. Features include medicine reminder, calorie calculator, real time diet menu generator, analysis and much more.
-
-- project :
     name: Hipster Wallpaper
     tools: [android, java, php]
     description: A simple wallpaper app with hipster wallpapers!
@@ -20,6 +15,11 @@
     tools: [html, css, php, javascript]
     description: A website that helps people find the perfect car for them.
     external_url: https://github.com/jacobceles/Autovia
+- project :
+    name: App De`Vitae
+    tools: [android, java]
+    image: /assets/img/app_de_vitae.png
+    description: An application which acts as a fitness assistant, by monitoring parameters of the user and his diet. Features include medicine reminder, calorie calculator, real time diet menu generator, analysis and much more.
 
 - project :
     name: MyBooksDB
