--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,15 +11,30 @@
     description: A simple wallpaper app with hipster wallpapers!
 
 - project :
+    name: Ultimate Quiz App
+    tools: [android, kotlin, html]
+    image: /assets/img/ultimate_quiz_app.png
+    description: Challenge yourself to the limits with this fun & addictive quiz app!
+    external_url: https://play.google.com/store/apps/details?id=com.quizgamesapps.ultimatequizapp
+
+- project :
     name: Autovia
     tools: [html, css, php, javascript]
     description: A website that helps people find the perfect car for them.
     external_url: https://github.com/jacobceles/Autovia
+
 - project :
     name: App De`Vitae
     tools: [android, java]
     image: /assets/img/app_de_vitae.png
     description: An application which acts as a fitness assistant, by monitoring parameters of the user and his diet. Features include medicine reminder, calorie calculator, real time diet menu generator, analysis and much more.
+
+- project :
+    name: Hero Academia Quiz
+    tools: [android, java, kotlin]
+    image: /assets/img/my_hero_academia_quiz.png
+    description: An MHA Quiz App, for the fans, by the fans.
+    external_url: https://play.google.com/store/apps/details?id=com.quizgamesapps.heroacademiaquiz
 
 - project :
     name: MyBooksDB
