Updated experience and education

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,12 +1,12 @@
 - company: Nike
   url: https://www.nike.com/in/
-  time: Oct 2018 - Present
+  time: Oct 2018 - Dec 2020
   position: Big Data Engineer (Infosys Consultant)
 
 - company: Infosys
   url: https://www.infosys.com/
-  time: Dec 2017 - Present
-  position: Senior Systems Engineer
+  time: Dec 2017 - Jan 2021
+  position: Technology Analyst
 
 - company: Agrima Infotech
   url: http://www.agrimainfotech.com/
@@ -15,8 +15,8 @@
 
 - company: Legna Studios
   url: https://www.facebook.com/legnastudios/
-  time: Nov 2016 - Present
-  position: Android Developer (Freelance)
+  time: Freelance
+  position: Android Developer
 
 - company: Agrima Infotech
   url: http://www.agrimainfotech.com/
