--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,22 +6,23 @@
     external_url: https://jacobcelestine.com/knowledge_repo/colab_and_pyspark/
 
 - project :
-    name: Hipster Wallpaper
-    tools: [android, java, php]
-    description: A simple wallpaper app with hipster wallpapers!
-    
-- project :
-    name: Hero Academia Quiz
-    tools: [android, java, kotlin]
-    image: /assets/img/my_hero_academia_quiz.png
-    description: An MHA Quiz App, for the fans, by the fans.
-    external_url: https://play.google.com/store/apps/details?id=com.quizgamesapps.heroacademiaquiz
+    name: Using SQL to query MongoDB, Redshift and MySQL 
+    tools: [python, flask, html, css]
+    description: A flask based web application which uses python and JDBC to establish connection with and query Redshift, SQL, and MongoDB.
+    external_url: https://github.com/jacobceles/CS527
 
 - project :
-    name: Autovia
-    tools: [html, css, php, javascript]
-    description: A website that helps people find the perfect car for them.
-    external_url: https://github.com/jacobceles/Autovia
+    name: Implementation of Simplex Algorithm
+    tools: [python, flask, html, css]
+    description: A web App which emulates the Simplex Algorithm.
+    external_url: https://github.com/jacobceles/cs512-proj
+    
+- project :
+    name: Micro Stories
+    tools: [android, kotlin, php]
+    image: /assets/img/micro+_stories.png
+    description: A community of like minded story tellers.
+    external_url: https://play.google.com/store/apps/details?id=com.appsoflife.mcostories
 
 - project :
     name: App De`Vitae
@@ -35,6 +36,12 @@
     image: /assets/img/ultimate_quiz_app.png
     description: Challenge yourself to the limits with this fun & addictive quiz app!
     external_url: https://play.google.com/store/apps/details?id=com.quizgamesapps.ultimatequizapp
+
+- project :
+    name: Autovia
+    tools: [html, css, php, javascript]
+    description: A website that helps people find the perfect car for them.
+    external_url: https://github.com/jacobceles/Autovia
 
 - project :
     name: MyBooksDB
