--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -21,9 +21,9 @@
     
 - project :
     name: Multi Database Querier
-    tools: [python, flask, html, css, mysql, redshift, mongodb]
+    tools: [python, flask, html, css, mysql, redshift, mongodb, javascript]
     image: /assets/img/multi_db_querier.jpg
-    description: Flask based web app which uses SQL queries to interact with Redshift, MySQL, and MongoDB.
+    description: Flask based web app which uses SQL queries to interact with Redshift, MySQL, and MongoDB. Also has an autocomplete feture to help with the queries.
     external_url: https://github.com/jacobceles/multi-db-querier
 
 - project :
@@ -39,15 +39,15 @@
     external_url: https://github.com/jacobceles/Autovia
 
 - project :
-    name: Chicago Taxi Trips Analysis
-    tools: [spark-structured-streaming,pyspark,spark-sql,flask,python,html,css,js]
-    image: /assets/img/simplex_algorithm.jpg
+    name: Chicago Taxi Trips Streaming Analysis
+    tools: [spark-structured-streaming,pyspark,spark-sql,flask,python,html,css,javascript]
+    image: /assets/img/chicago_taxi_trips_streaming_analysis.jpg
     description: Analyzing the infamous Chicago City Taxi Trips dataset using Spark Structured Streaming, along with a real time dashboard for reporting the metrics.
     external_url: https://github.com/jacobceles/ChicagoTaxiTrips-SparkStreaming-RealTimeDashboard
 
 - project :
     name: Implementation of Simplex Algorithm
-    tools: [python, flask, html, css]
+    tools: [python, flask, html, css, javascript]
     image: /assets/img/simplex_algorithm.jpg
     description: A web App which emulates the Simplex Algorithm.
     external_url: https://github.com/jacobceles/simplex-algorithm
