--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,3 +1,8 @@
+- company: Rutgers University
+  url: https://comminfo.rutgers.edu/
+  time: Sep 2021 - Present
+  position: Research Associate
+
 - company: Nike
   url: https://www.nike.com/in/
   time: Oct 2018 - Dec 2020
