--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,18 @@
 - project :
+    name: Covid Viz-Hub
+    tools: [python, dashboard, numpy, plotly, pandas, dash, covid-19]
+    image: /assets/img/covid_viz_hub.jpg
+    description: A visual analytics dashboard for Covid built using Dash and Plotly.
+    external_url: https://github.com/jacobceles/covid-viz-hub
+
+- project :
+    name: Movie Recommendation & Rating Prediction
+    tools: [python, machine-learning, movie-recommendation, rating-prediction, surprise-python, surprise-library, modin]
+    image: /assets/img/movie_rating_recommendation.jpg
+    description: Comparing different algorithms for rating prediction, and creating a movie recommendation system on top of it.
+    external_url: https://github.com/jacobceles/Movie-Recommendation-Rating-Prediction
+
+- project :
     name: Introduction to Google Colab and PySpark
     tools: [pyspark, colaboratory, spark-job-tuning, dataframe, emr]
     image: /assets/img/pyspark_colab_emr.jpg
