Updated education and work experience

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 - company: Rutgers University
   url: https://comminfo.rutgers.edu/
-  time: Sep 2021 - Present
+  time: Sep 2021 - Dec 2021
   position: Research Associate
 
 - company: Nike
