--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,11 @@
+- company: Veeva Systems
+  url: https://comminfo.rutgers.edu/
+  time: Jan 2023 - Present
+  position: Data Engineer
+
 - company: Rutgers University
   url: https://comminfo.rutgers.edu/
-  time: Sep 2021 - Dec 2021
+  time: Sep 2021 - Dec 2022
   position: Research Associate
 
 - company: Nike
