Updated URL for veeva

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,5 +1,5 @@
 - company: Veeva Systems
-  url: https://comminfo.rutgers.edu/
+  url: https://www.veeva.com/
   time: Jan 2023 - Present
   position: Data Engineer
 
